--- a/public/s/index.html
+++ b/public/s/index.html
@@ -21,7 +21,7 @@
 					<section id="sec-out" class="sec hidden">
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-								<li class="active"><a href="#/enter">进入讲座</a></li>
+								<li><a href="#/enter">进入讲座</a></li>
 								<li><a href="#/open">申请讲座</a></li>
 							</ul>
 						</div>
@@ -29,7 +29,7 @@
 					<section id="sec-in" class="sec hidden">
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-								<li class="active"><a href="#/view">查看讲座</a></li>
+								<li><a href="#/view">查看讲座</a></li>
 								<li><a href="#/audience">听众列表</a></li>
 								<li><a href="#/share">共享文件</a></li>
 								<li><a href="#/votes">投票管理</a></li>
