--- a/public/a/join.html
+++ b/public/a/join.html
@@ -1,38 +1,40 @@
 ﻿
 <div id="main-wrapper">
-    <h1>欢迎使用演讲家</h1>
-    <form id="form-join">
-        <div class="form-group">
-            <input type="text" class="form-control" name="key" placeholder="讲座序列号">
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" name="nick" placeholder="听众昵称">
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-lg btn-block">
-                加入讲座
-            </button>
-        </div>
-    </form>
+	<h1>欢迎使用演讲家</h1>
+	<form id="form-join">
+		<div class="form-group">
+			<input type="text" class="form-control" name="key" placeholder="讲座序列号">
+		</div>
+		<div class="form-group">
+			<input type="text" class="form-control" name="nick" placeholder="听众昵称">
+		</div>
+		<div class="form-group">
+			<button type="submit" class="btn btn-primary btn-lg btn-block">
+				加入讲座
+			</button>
+		</div>
+	</form>
 </div>
 
 <script>
-    var key = getHashParams()['key'],
-            $formJoin = $('#form-join');
+	var key = getHashParams()['key'],
+			$formJoin = $('#form-join');
 
-    if (key) {
-        $formJoin.find('[name="key"]').attr('readonly', true).val(key);
-    }
+	if (key) {
+		$formJoin.find('[name="key"]').attr('readonly', true).val(key);
+	}
 
-    $formJoin.ajaxForm({
-        url: '/do/a/join',
-        success: function(resObj) {
-            var ok = resObj['ok'],
-                msg = resObj['msg'];
-            alert(msg);
-            if (ok) {
-                loadFrame('#/view');
-            }
-        }
-    });
+	$formJoin.ajaxForm({
+		url: '/do/a/join',
+		success: function(resObj) {
+			var ok = resObj['ok'],
+				msg = resObj['msg'];
+			alert(msg);
+			if (ok) {
+				loadFrame('#/view');
+				$navbar.find('.sec').addClass('hidden')
+					.filter('#sec-in').removeClass('hidden');
+			}
+		}
+	});
 </script>
