--- a/public/a/index.html
+++ b/public/a/index.html
@@ -23,6 +23,9 @@
 							<ul class="nav navbar-nav">
 								<li><a href="#/join">加入讲座</a></li>
 							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li><a class="ex-link" href="/s">管理讲座</a></li>
+							</ul>
 						</div>
 					</section>
 					<section id="sec-in" class="sec hidden">
