--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -1,6 +1,6 @@
 
 <div id="main-wrapper">
-    <h1>进入讲座</h1>
+    <h1>管理讲座</h1>
 
     <form id="form-enter">
         <div class="form-group">
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg btn-block">
-                进入讲座
+                管理讲座
             </button>
         </div>
     </form>
