--- a/public/s/index.html
+++ b/public/s/index.html
@@ -21,8 +21,11 @@
 					<section id="sec-out" class="sec hidden">
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-								<li><a href="#/enter">进入讲座</a></li>
+								<li><a href="#/enter">管理讲座</a></li>
 								<li><a href="#/open">申请讲座</a></li>
+							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li><a class="ex-link" href="/a">加入讲座</a></li>
 							</ul>
 						</div>
 					</section>
